--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: The Official Madison Python Users' Group Website
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>News</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li>
+        <span>
+            {{ post.date | date_to_string }}
+        </span>
+        &raquo;
+        <a href="{{ post.url }}">
+            {{ post.title }}
+        </a>
+    </li>
     {% endfor %}
   </ul>
 </div>
